Fix SKU Supplier's Catalogue word wrapping

--- a/src/app/main/pages/catalogues/catalogues.component.scss
+++ b/src/app/main/pages/catalogues/catalogues.component.scss
@@ -82,6 +82,10 @@ app-catalogues {
             min-width: 0;
             display: flex;
             align-items: center;
+
+            .word-wrap {
+                word-break: break-all;
+            }
         }
 
         .mat-column-checkbox {
